--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-a new chapter
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <title>Go Team</title>
+    <meta name="author" content="wukelly">
+
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <script type="text/javascript" src="js/sparkles.js"></script>
+</body>
+</html>
